Main container two columns created and adjusted. Sticky part added.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         </ul>
       </nav>
       <div class="main-container">
+        <div class="row">
+          <div class="col-xs-12 col-md-7 order-md-6">
         <div class="content">
           <div class="content-header">
             TOP STORY
@@ -60,6 +62,7 @@
             </ul>
           </article>
         </div>
+        <div class="sticky-top">
         <div class="content">
           <div class="content-header">
             MORE STORIES
@@ -81,7 +84,120 @@
             <div class="summary">"The records should be turned over to the Oversight Committee. Whether they will is another story," said Michael J. Stern, a former federal prosecutor.</div></article>
             <article class="clearfix"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm_thumb/public/2019/04/22/gettyimages-1138525028.jpg" alt="" class="More-Stories-Img"><h4>Russia: Comedian's Win in Ukraine Was 'Obvious' Choice</h4>
             <div class="summary">"It is too early to talk about President Putin’s offering his congratulations to Zelensky, as well as speaking about the possibilities of working together,” a Kremlin spokesperson said about comedian-actor Volodymyr Zelensky, Ukraine's new president.</div></article>
+            </div>
           </div>
+        </div>
+        </div>
+        <div class="col-xs-12 col-md-5 order-md-1">
+        <div class="content">
+          <div class="content-header">
+            FEATURED STORIES
+          </div>
+          <article>
+            <div class="card">
+              <div class="category"><a href="">WORLD</a></div>
+              <div class="image"><a href="">
+                  <img width="100%" height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/2019/04/23/sri-lanka-christchurch-mosques-attack-bombings.jpg" alt="GettyImages-1136467917" title="">
+                </a></div>
+            </div>
+            <h2><a href="#">Sri Lanka Bombs Were 'Response' to Christchurch Attack</a></h2>
+            <div class="summary"> Ruwan Wijewardene also reported the death toll had risen to 321.</div>
+            <ul class="related">
+              <li><a href="">Fox News Star Says Democrats 'Pander' to Muslims</a></li>
+            </ul>
+          </article>
+        </div>
+        <div class="content">
+          <article>
+            <div class="card">
+              <div class="category"><a href="">U.S.</a></div>
+              <div class="image"><a href="">
+                  <img width="100%" height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/2019/04/23/gettyimages-821635484.jpg" alt="GettyImages-1136467917" title="">
+                </a></div>
+            </div>
+            <h2><a href="#">Donald Trump Jr. Hits Out at Ilhan Omar on Twitter</a></h2>
+            <div class="summary"> The eldest son of President Trump was referring to a 2017 tweet the Somali American congresswoman made following a deadly truck bomb blast in Mogadishu.</div>
+            <ul class="related">
+              <li><a href="">Dem: Mueller Not Indicting Trump Jr. Is a ‘Mystery’</a></li>
+            </ul>
+          </article>
+        </div>
+        <div class="content">
+          <article>
+            <div class="card">
+              <div class="category"><a href="">U.S.</a></div>
+              <div class="image"><a href="">
+                  <img width="100%" height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/2019/04/23/pete-buttigieg-donald-trump-impeachment.jpg" alt="GettyImages-1136467917" title="">
+                </a></div>
+            </div>
+            <h2><a href="#">Pete Buttigieg Says Trump Deserves Impeachment</a></h2>
+            <div class="summary"> South Bend Mayor Pete Buttigieg, a candidate for the Democratic Party's 2020 presidential nomination, made the comment about President Donald Trump during a CNN town hall.</div>
+            <ul class="related">
+              <li><a href="">Pelosi Urges Dems to Investigate Trump, Not Impeach</a></li>
+            </ul>
+          </article>
+        </div>
+        <div class="content">
+          <article>
+            <div class="card">
+              <div class="category"><a href="">HEALTH</a></div>
+              <div class="image"><a href="">
+                  <img width="100%" height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/2019/04/23/age-old-hands-carestock-getty-images.jpg" alt="GettyImages-1136467917" title="">
+                </a></div>
+            </div>
+            <h2><a href="#">Longevity Gene Could Prevent Age-related Diseases</a></h2>
+            <div class="summary"> "If diseases happen because of DNA that becomes disorganized with age, we can use research like this to target interventions that can delay cancer and other degenerative diseases," the study co-author explained</div>
+            <ul class="related">
+              <li><a href="">Secret of Longevity Could Be Found in Japanese Plant</a></li>
+            </ul>
+          </article>
+        </div>
+        <div class="content">
+          <article>
+            <div class="card">
+              <div class="category"><a href="">SPONSORED INSIGHT</a></div>
+              <div class="image"><a href="">
+                  <img width="100%" height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/image_01_fullscreen.8a9dcafb.jpg" alt="GettyImages-1136467917" title="">
+                </a></div>
+            </div>
+            <h2><a href="#">ZENITH'S DEFY INVENTOR IS REVOLUTIONIZING MECHANICAL WATCHMAKING</a></h2>
+            <div class="summary">The new Zenith Defy Inventor showcases the groundbreaking Zenith Oscillator control system, which replaces the traditional sprung balance that’s been the standard for over three centuries.</div>
+            <ul class="related">
+              <li></li>
+            </ul>
+          </article>
+        </div>
+        <div class="content">
+          <article>
+            <div class="card">
+              <div class="category"><a href="">SPONSORED INSIGHT</a></div>
+              <div class="image"><a href="">
+                  <img width="100%" height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/profile/3a_amadeus_image_with_text.png" alt="GettyImages-1136467917" title="">
+                </a></div>
+            </div>
+            <h2><a href="#">THE IMPORTANCE OF AN IB EDUCATION IN 2019</a></h2>
+            <div class="summary">An International Baccalaureate (IB) education inspires young people to become lifelong learners – where can your child go to benefit from it?</div>
+            <ul class="related">
+              <li></li>
+            </ul>
+          </article>
+        </div>
+        <div class="content">
+          <article>
+            <div class="card">
+              <div class="category"><a href="">SPONSORED INSIGHT</a></div>
+              <div class="image"><a href="">
+                  <img width="100%" height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/2019-0308-guatemala-td-sponsor.jpg" alt="GettyImages-1136467917" title="">
+                </a></div>
+            </div>
+            <h2><a href="#">Guatemala: The Heart of the Mayan World</a></h2>
+            <div class="summary">A trip to Guatemala is an invitation to immerse yourself in history, culture, tradition, and romance.</div>
+            <ul class="related">
+              <li></li>
+            </ul>
+          </article>
+        </div>
+        </div>
         </div>
       </div>
       </div>
