Main Content In the magazine part for sm.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </nav>
       <div class="main-container">
         <div class="row">
-          <div class="col-xs-12 col-md-7 order-md-6">
+          <div class="col-xs-12 col-md-7 order-md-6 col-lg-5 order-lg-4">
         <div class="content">
           <div class="content-header">
             TOP STORY
@@ -88,7 +88,8 @@
           </div>
         </div>
         </div>
-        <div class="col-xs-12 col-md-5 order-md-1">
+
+        <div class="col-xs-12 col-md-5 order-md-1 col-lg-3 order-lg-1">
         <div class="content">
           <div class="content-header">
             FEATURED STORIES
@@ -198,7 +199,159 @@
           </article>
         </div>
         </div>
+
+        <div class="col-xs-12 col-md-12 col-lg-4 order-lg-9">
+        <div class="content">
+        <div class="content-header">
+          OPINION
         </div>
+        <ul class="p-0">
+          <li class="flex-xs clearfix">
+            <div class="image rounded-circle float-left"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/square_thumbnail/public/23544/profile_image/nw-columnists-craig-considine.png" alt=""></div>
+              <div class="info"><a href="#">Church Attacks are Opposite of Islam's True Teachings</a>
+              <div class="byline"> BY <span>Craig Considine</span></div>
+            </div>
+          </li>
+          <li class="flex-xs clearfix">
+            <div class="image rounded-circle float-left"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/square_thumbnail/public/23544/profile_image/nw-columnists-saul-hudson.png" alt=""></div>
+              <div class="info"><a href="#">The Anthropocene Era: Do We Now Live on a Human Planet?</a>
+              <div class="byline"> BY <span>NOEL CASTREE</span></div>
+            </div>
+          </li>
+          <li class="flex-xs clearfix">
+            <div class="image rounded-circle float-left"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/square_thumbnail/public/23544/profile_image/robert_reich.png" alt=""></div>
+              <div class="info"><a href="#">Mueller Proved Trump Is Embodiment of 7 Deadly Sins</a>
+              <div class="byline"> BY <span>ROBERT REICH</span></div>
+            </div>
+          </li>
+          <li class="flex-xs clearfix">
+            <div class="image rounded-circle float-left"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/square_thumbnail/public/23544/profile_image/nw-columnists-craig-considine.png" alt=""></div>
+              <div class="info"><a href="#">A History of Sri Lanka's Christians</a>
+              <div class="byline"> BY <span>MATHEW SCHMALZ</span></div>
+            </div>
+          </li>
+          <li class="flex-xs clearfix">
+            <div class="image rounded-circle float-left"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/square_thumbnail/public/23544/profile_image/nw-columnists-saul-hudson.png" alt=""></div>
+              <div class="info"><a href="#">In Venezuela’s Perfect Storm, Bitcoin Is a Lifeline</a>
+              <div class="byline"> BY <span>SAUL HUDSON</span></div>
+            </div>
+          </li>
+        </ul>
+        </div>
+        <div class="content">
+        <div class="content-header">
+          LATEST NEWS
+        </div>
+        <div>
+          <article class="clearfix"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/2019/04/23/screen-shot-2019-04-23-9.png" alt="" class="More-Stories-Img"><h4>Jamie Lynn Spears Comments On #FreeBritney</h4></article>
+          <article class="clearfix"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/2019/04/23/christian-schilcher-rats-migrants-austria-fpo.jpg" alt="" class="More-Stories-Img"><h4>Politician Describes Migrants As Rats, Forced to Resign</h4></article>
+          <article class="clearfix"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/2019/04/23/starbucks-add-needle-disposal-boxes.jpg" alt="" class="More-Stories-Img"><h4>Starbucks to Put Needle-Disposal Boxes in U.S. Chains</h4></article>
+          <article class="clearfix"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/2019/04/23/beyonce-lemonade-spotify-apple-music-stream.jpg" alt="" class="More-Stories-Img"><h4>Listen To Beyoncé's Lemonade Right Now</h4></article>
+          <article class="clearfix"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/2019/04/23/gettyimages-1138061136.jpg" alt="" class="More-Stories-Img"><h4>MSNBC Host: Americans Know Trump Is a ‘Scam’</h4></article>
+          <article class="clearfix"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/2019/04/23/richard-adams.jpg" alt="" class="More-Stories-Img"><h4>Ohio Man Praised for Attacking Child Molester Dies</h4></article>
+          <article class="clearfix"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/2019/04/23/man-wearing-be-good-human-shirt.png" alt="" class="More-Stories-Img"><h4>Man in ‘Be a Good Human’ Shirt Accused of Jewelry Theft</h4></article>
+          <article class="clearfix"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/2019/04/23/alligator-gar-fish-lake-texoma.jpg" alt="" class="More-Stories-Img"><h4>Huge ‘Prehistoric’ Alligator Gar Caught in Oklahoma</h4></article>
+          </div>
+        </div>
+        <div class="content">
+          <div class="card mb-5">
+            <div class="card">
+            <img src="https://s.newsweek.com/sites/www.newsweek.com/files/weed11_banner_300x250.jpg" alt="" class="card-img-top">
+            <div class="category"><a href="" class="text-primary">SPECIAL EDITION</a></div>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Weed: 2.0</h5>
+              <p class="card-text">The green tide is rising, but what does legalization mean for the nation? Explore how the cannabis industry is changing our cultural landscape in this new Special Edition!</p>
+            </div>
+          </div>
+          <div class="content w-100 mb-5">
+            <div class="signup p-4 m-auto">
+              <div class="signup-title flex-xs ai-c"> <span class="float-left"></span>SIGN UP FOR OUR NEWSLETTER</div>
+              <a href="#" class="btn btn-dark mt-1 mb-2">SIGN UP ></a> <br>
+              <a href="#" class="Sign-Update">Update your preferences</a>
+            </div>
+          </div>
+          <div class="card mb-5">
+            <div class="card">
+            <img src="https://s.newsweek.com/sites/www.newsweek.com/files/2019-0410-paraguay-td-sponsored.jpg" alt="" class="card-img-top">
+            <div class="category"><a href="" class="text-primary">SPECIAL EDITION</a></div>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Paraguay: Ideal investment conditions</h5>
+              <p class="card-text">Discover how a new, business-friendly government and the world’s largest generator of renewable energy are turning one of Latin America’s fastest-growing economies into a hotspot for international investors.</p>
+            </div>
+          </div>
+          <div class="card mb-5">
+            <div class="card">
+            <img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/profile/c75t9359.jpg" alt="" class="card-img-top">
+            <div class="category"><a href="" class="text-primary">SPECIAL EDITION</a></div>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">GLOBAL EDUCATION 2019</h5>
+              <p class="card-text">‘One size fits all’ teaching is a thing of the past. The nurturing of critical thinking is paramount in today’s global student. Where are the leaders of tomorrow studying?</p>
+            </div>
+          </div>
+        </div>
+        </div>
+        </div>
+
+        <div class="content">
+          <div class="card border-0">
+            <div class="card">
+              <img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/embed-xs/public/2019/04/18/17190426-0503cover1800x2400.jpg" alt="" class="card-img-top">
+              <div class="category"><a href="">MAY 03 ISSUE</a></div>
+            </div>
+            <div class="card-body cardback">
+                <h4 class="text-center"><a href="#">SEE ALL FEATURES ></a></h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="signup-title flex-xs ai-c" id="In-The-Magazine">
+          <span class="float-left"></span>In the Magazine
+        </div>
+
+        <div class="content">
+          <div class="card border-0">
+            <img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/md_thumb/public/2019/04/12/feschiff01banner.jpg" alt="" class="card-img-top">
+              <div class="my-3"> <span class="mag-categ mr-1">FEATURES </span><span class="cat">U.S</span></div>
+              <h4>Adam Schiff Says Donald Trump Should Be Prosecuted</h4>
+          </div>
+        </div>
+
+        <div class="content">
+          <div class="card border-0">
+            <img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/md_thumb/public/2019/04/08/feomar011130744964.jpg" alt="" class="card-img-top">
+              <div class="my-3"> <span class="mag-categ mr-1">FEATURES </span><span class="cat">U.S</span></div>
+              <h4>Ilhan Omar Is Changing the Conversation About Israel</h4>
+          </div>
+        </div>
+
+        <div class="content">
+          <div class="card border-0">
+            <img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/md_thumb/public/2019/03/22/affirmative-action-college-admissions-scandal-statistics.jpg" alt="" class="card-img-top">
+              <div class="my-3"> <span class="mag-categ mr-1">DOWNLOADS </span><span class="cat">U.S</span></div>
+              <h4>An End to Affirmative Action?</h4>
+          </div>
+        </div>
+
+        <div class="content">
+          <div class="card border-0">
+            <img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/md_thumb/public/2019/03/04/fewhiteidentity01619475022.jpg" alt="" class="card-img-top">
+              <div class="my-3"> <span class="mag-categ mr-1">COVER </span><span class="cat">U.S</span></div>
+              <h4>Make America White Again?</h4>
+          </div>
+        </div>
+
+        <div class="content">
+          <div class="card border-0">
+            <img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/md_thumb/public/2019/02/26/doug-jones.jpg" alt="" class="card-img-top">
+              <div class="my-3"> <span class="mag-categ mr-1">DOWNLOADS </span><span class="cat">U.S</span></div>
+              <h4>Doug Jones: The Republican Party Is Losing Its Soul </h4>
+          </div>
+        </div>
+
+
       </div>
       </div>
 
