End of the Page.

--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
 
         <div class="row my-2">
 
-          <div class="col-sm-12 col-lg-4">
+          <div class="col-xs-12 col-lg-4">
             <div class="bg-none font-weight-bolder mt-2" style="font-size:20px; color:#f72210; font-family:'Roboto Condensed';">
               SUBSCRIBE
             </div>
@@ -740,11 +740,80 @@
           </div>
           </div>
 
-          <div class="card col-xs-12 border-0 col-md-4 px-0">
+          <div class="content col-xs-12 border-0 col-lg-4 px-0">
+            <div class="bg-none font-weight-bolder mt-2 text-primary" style="font-size:20px; font-family:'Roboto Condensed';">
+              SPONSORED INSIGHT
+            </div>
+          <div class="card">
 
             <img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/profile/univ_of_utah_pharmacybuildingsunset.jpg" alt="" class="card-img-top">
             <div class="card-body py-1 lastpart"><h4>Should You Be Thinking About a Career in Pharmacy?</h4> <div class="summary">Few career areas are as aspirational and revered as those in the medical sector, but it’s not just doctors and surgeons that are the stars...</div> </div>
           </div>
+          </div>
+
+          <div class="content col-xs-12 border-0 col-lg-4">
+            <div class="bg-none font-weight-bolder mt-2 text-body font-weight-bold" style="font-size:20px; font-family:'Roboto Condensed';">
+              MOST READ
+            </div>
+            <article class="clearfix"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/thumbnail/public/2019/04/24/triatoma-sanguisuga-kissing-bug.jpg" alt="" class="More-Stories-Img last-imgs"><h4>CDC: Blood-sucking 'Kissing Bug' Confirmed in Delaware</h4></article>
+            <article class="clearfix mt-1 pt-2"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/thumbnail/public/2019/04/23/ghostadventuresseason16ep4150901.jpg" alt="" class="More-Stories-Img last-imgs"><h4>A Creepy Discovery Follows 'Ghost Aventures' Visit</h4></article>
+            <article class="clearfix mt-1 pt-2"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/thumbnail/public/2019/04/23/art-laffer-fox.png" alt="" class="More-Stories-Img last-imgs"><h4>Reagan Economist Claims Obama Started Great Recession</h4></article>
+            <article class="clearfix"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/thumbnail/public/2019/04/23/andy-mckean-facebook.png" alt="" class="More-Stories-Img last-imgs"><h4>Citing Trump, Veteran Iowa Republican Switches Party</h4></article>
+            <article class="clearfix mt-1 pt-2"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/thumbnail/public/2019/04/23/voice-2019-live-cross-battles-results-recap-who-saved-tonight-last-night-eliminated.png" alt="" class="More-Stories-Img last-imgs"><h4>‘The Voice’ 2019 Top 24 Results</h4></article>
+
+          </div>
+
+        <div class="content w-100">
+          <footer class="page-footer">
+            <div class="d-md-flex justify-content-between align-items-end">
+              <div class="d-md-flex align-items-end">
+                <a href="#"><img src="assets/images/nw_logo_white.png" alt=""></a>
+                <p class="copyright">© 2019 Newsweek</p>
+              </div>
+              <ul class="d-md-flex justify-content-between align-items-end px-0">
+                <li class="d-inline-block"><a href="#"><img src="assets/images/icons/facebook.png" alt=""></a></li>
+                <li class="d-inline-block pl-2"><a href="#"><img src="assets/images/icons/twitter.png" alt=""></a></li>
+                <li class="d-inline-block pl-2"><a href="#"><img src="assets/images/icons/instagram.png" alt=""></a></li>
+                <li class="d-inline-block pl-2"><a href="#"><img src="assets/images/icons/tumblr.png" alt=""></a></li>
+                <li class="d-inline-block pl-2"><a href="#"><img src="assets/images/icons/linkedin.png" alt=""></a></li>
+              </ul>
+            </div>
+            <div class="footer-links mt-2 pt-2">
+              <div class="row">
+                <div class="col-xs-12 col-lg-7 links-first">
+                  <ul class="menu px-0">
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Corrections</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Editorial Guidelines</a></li>
+                    <li><a href="#">Advertise</a></li>
+                    <li><a href="#">Copyright</a></li>
+                    <li><a href="#">Terms & Conditions</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Cookie Policy</a></li>
+                    <li><a href="#">Terms of Sale</a></li>
+                    <li><a href="#">Archive</a></li>
+                    <li><a href="#">Announcements</a></li>
+                    <li><a href="#">Consent Preferences</a></li>
+                  </ul>
+                </div>
+                <div class="col-xs-12 col-lg-4 offset-lg-1 links-second">
+                  <label class="h-100 float-left d-inline-block" style="margin-top:2px;margin-right:15px"><strong>Editions:</strong></label>
+                  <ul class="menu px-0">
+                    <li><a href="#">U.S. Edition</a></li>
+                    <li><a href="#">Middle East</a></li>
+                    <li><a href="#">日本</a></li>
+                    <li><a href="#">한국</a></li>
+                    <li><a href="#">Pakistan</a></li>
+                    <li><a href="#">Polska</a></li>
+                    <li><a href="#">Romania</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </footer>
+        </div>
+
 
         </div>
 
