--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header class="row justify-content-between align-items-center .px-2 m-0 w-100 header">
         <div class="header-left">
           <div class="d-none d-lg-block date mt-lg-5">
-          <date >Mon, Apr 22, 2019</date>
+          <div >Mon, Apr 22, 2019</div>
           </div>
           <img src="assets/images/newsweek-logo.png" alt="" class="d-lg-none">
         </div>
@@ -52,7 +52,7 @@
             <div class="card">
               <div class="category"><a href="">U.S.</a></div>
               <div class="image"><a href="">
-                  <img width="100%" height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/md/public/2019/04/22/gettyimages-1136467917.jpg" alt="GettyImages-1136467917" title="">
+                  <img height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/md/public/2019/04/22/gettyimages-1136467917.jpg" alt="GettyImages-1136467917" title="">
                 </a></div>
             </div>
             <h2><a href="#">Is Elizabeth Warren's Plan for Free College Feasible?</a></h2>
@@ -98,7 +98,7 @@
             <div class="card">
               <div class="category"><a href="">WORLD</a></div>
               <div class="image"><a href="">
-                  <img width="100%" height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/2019/04/23/sri-lanka-christchurch-mosques-attack-bombings.jpg" alt="GettyImages-1136467917" title="">
+                  <img height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/2019/04/23/sri-lanka-christchurch-mosques-attack-bombings.jpg" alt="GettyImages-1136467917" title="">
                 </a></div>
             </div>
             <h2><a href="#">Sri Lanka Bombs Were 'Response' to Christchurch Attack</a></h2>
@@ -113,7 +113,7 @@
             <div class="card">
               <div class="category"><a href="">U.S.</a></div>
               <div class="image"><a href="">
-                  <img width="100%" height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/2019/04/23/gettyimages-821635484.jpg" alt="GettyImages-1136467917" title="">
+                  <img height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/2019/04/23/gettyimages-821635484.jpg" alt="GettyImages-1136467917" title="">
                 </a></div>
             </div>
             <h2><a href="#">Donald Trump Jr. Hits Out at Ilhan Omar on Twitter</a></h2>
@@ -128,7 +128,7 @@
             <div class="card">
               <div class="category"><a href="">U.S.</a></div>
               <div class="image"><a href="">
-                  <img width="100%" height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/2019/04/23/pete-buttigieg-donald-trump-impeachment.jpg" alt="GettyImages-1136467917" title="">
+                  <img height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/2019/04/23/pete-buttigieg-donald-trump-impeachment.jpg" alt="GettyImages-1136467917" title="">
                 </a></div>
             </div>
             <h2><a href="#">Pete Buttigieg Says Trump Deserves Impeachment</a></h2>
@@ -143,7 +143,7 @@
             <div class="card">
               <div class="category"><a href="">HEALTH</a></div>
               <div class="image"><a href="">
-                  <img width="100%" height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/2019/04/23/age-old-hands-carestock-getty-images.jpg" alt="GettyImages-1136467917" title="">
+                  <img height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/2019/04/23/age-old-hands-carestock-getty-images.jpg" alt="GettyImages-1136467917" title="">
                 </a></div>
             </div>
             <h2><a href="#">Longevity Gene Could Prevent Age-related Diseases</a></h2>
@@ -158,7 +158,7 @@
             <div class="card">
               <div class="category"><a href="">SPONSORED INSIGHT</a></div>
               <div class="image"><a href="">
-                  <img width="100%" height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/image_01_fullscreen.8a9dcafb.jpg" alt="GettyImages-1136467917" title="">
+                  <img height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/image_01_fullscreen.8a9dcafb.jpg" alt="GettyImages-1136467917" title="">
                 </a></div>
             </div>
             <h2><a href="#">ZENITH'S DEFY INVENTOR IS REVOLUTIONIZING MECHANICAL WATCHMAKING</a></h2>
@@ -173,7 +173,7 @@
             <div class="card">
               <div class="category"><a href="">SPONSORED INSIGHT</a></div>
               <div class="image"><a href="">
-                  <img width="100%" height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/profile/3a_amadeus_image_with_text.png" alt="GettyImages-1136467917" title="">
+                  <img height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/profile/3a_amadeus_image_with_text.png" alt="GettyImages-1136467917" title="">
                 </a></div>
             </div>
             <h2><a href="#">THE IMPORTANCE OF AN IB EDUCATION IN 2019</a></h2>
@@ -188,7 +188,7 @@
             <div class="card">
               <div class="category"><a href="">SPONSORED INSIGHT</a></div>
               <div class="image"><a href="">
-                  <img width="100%" height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/2019-0308-guatemala-td-sponsor.jpg" alt="GettyImages-1136467917" title="">
+                  <img height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/2019-0308-guatemala-td-sponsor.jpg" alt="GettyImages-1136467917" title="">
                 </a></div>
             </div>
             <h2><a href="#">Guatemala: The Heart of the Mayan World</a></h2>
@@ -264,7 +264,7 @@
               <p class="card-text">The green tide is rising, but what does legalization mean for the nation? Explore how the cannabis industry is changing our cultural landscape in this new Special Edition!</p>
             </div>
           </div>
-          <div class="content w-100 mb-5">
+          <div class="content w-100 my-5">
             <div class="signup p-4 m-auto">
               <div class="signup-title flex-xs ai-c"> <span class="float-left"></span>SIGN UP FOR OUR NEWSLETTER</div>
               <a href="#" class="btn btn-dark mt-1 mb-2">SIGN UP ></a> <br>
@@ -376,7 +376,7 @@
         </div>
 
 
-        <div class="signup-title flex-xs ai-c" id="In-The-Magazine">
+        <div class="signup-title flex-xs ai-c" id="In-The-Magazine2">
           <span class="float-left"></span>EDITORS' PICK
         </div>
         <div class="row">
@@ -461,7 +461,7 @@
         </div>
       </div>
 
-        <div class="signup-title flex-xs ai-c" id="In-The-Magazine">
+        <div class="signup-title flex-xs ai-c" id="In-The-Magazine3">
           <span class="float-left"></span>FEATURED SLIDESHOWS
         </div>
       <div class="row">
@@ -725,13 +725,13 @@
             </div>
             <div class="items">
             <div class="item1">
-              <img src="https://s.newsweek.com/sites/www.newsweek.com/themes/newsweek/images/package1.png">
+              <img src="https://s.newsweek.com/sites/www.newsweek.com/themes/newsweek/images/package1.png" alt="">
               <h3>DIGITAL ONLY</h3>
               <p><span class="genericon genericon-checkmark">	&#10004;</span>Free access to 40+ digital editions<br>
               <span class="genericon genericon-checkmark">&#10004;</span>Website Access<br><span class="genericon genericon-checkmark">&#10004;</span>Daily Newsletter</p>
             </div>
             <div class="item1 item2">
-              <img src="https://s.newsweek.com/sites/www.newsweek.com/themes/newsweek/images/package2.png">
+              <img src="https://s.newsweek.com/sites/www.newsweek.com/themes/newsweek/images/package2.png" alt="">
               <h3>PRINT & DIGITAL</h3>
               <p><span class="genericon genericon-checkmark">	&#10004;</span> Weekly magazine, delivered<br>
               <span class="genericon genericon-checkmark">&#10004;</span> Daily Newsletter<br><span class="genericon genericon-checkmark">&#10004;</span>Website Access</p>
@@ -770,7 +770,7 @@
                 <a href="#"><img src="assets/images/nw_logo_white.png" alt=""></a>
                 <p class="copyright">© 2019 Newsweek</p>
               </div>
-              <ul class="d-md-flex justify-content-between align-items-end px-0">
+              <ul class="d-md-flex justify-content-between align-items-end px-0 mb-0">
                 <li class="d-inline-block"><a href="#"><img src="assets/images/icons/facebook.png" alt=""></a></li>
                 <li class="d-inline-block pl-2"><a href="#"><img src="assets/images/icons/twitter.png" alt=""></a></li>
                 <li class="d-inline-block pl-2"><a href="#"><img src="assets/images/icons/instagram.png" alt=""></a></li>
