--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
   </head>
   <body>
 <div class="outer-container">
-      <header class="row justify-content-between align-items-center .px-2 m-0 w-100 header">
+      <header class="row justify-content-between align-items-center .px-2 m-0 w-100 header" id="header">
         <div class="header-left">
-          <div class="d-none d-lg-block date mt-lg-5">
+          <div class="d-none d-lg-block date mt-lg-5" id="date">
           <div >Mon, Apr 22, 2019</div>
           </div>
-          <img src="assets/images/newsweek-logo.png" alt="" class="d-lg-none">
+          <img src="assets/images/newsweek-logo.png" alt="" class="d-lg-none" id="small_logo">
         </div>
-        <div class="d-none d-lg-block">
+        <div class="d-none d-lg-block" id="main-logo">
           <img src="assets/images/newsweek-logo.png" alt="" class="main-logo">
         </div>
-        <div class="header-right mt-lg-5">
+        <div class="header-right mt-lg-5" id="header-right">
           <a href="#" class="btn text-white sign">SIGN IN</a>
           <a href="#" class="btn bg-white subscribe">SUBSCRIBE ></a>
-          <span class="d-lg-none"><img src="assets/images/icons/nav.png" alt=""></span>
+          <span class="d-lg-none" id="burger-menu"><img src="assets/images/icons/nav.png" alt=""></span>
         </div>
       </header>
       <nav class="navbar navbar-expand-lg d-none d-lg-flex justify-content-between main-nav">
@@ -821,7 +821,7 @@
       </div>
       </div>
 
-
+    <script src="assets/JS/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
