--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="card">
               <div class="category"><a href="">SPONSORED INSIGHT</a></div>
               <div class="image"><a href="">
-                  <img height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/image_01_fullscreen.8a9dcafb.jpg" alt="GettyImages-1136467917" title="">
+                  <img height="481" class="mapping-md lazysize  lazyloaded" src="assets/images/thumbs/gettyimages-1058974268.jpg" title="">
                 </a></div>
             </div>
             <h2><a href="#">ZENITH'S DEFY INVENTOR IS REVOLUTIONIZING MECHANICAL WATCHMAKING</a></h2>
@@ -173,7 +173,7 @@
             <div class="card">
               <div class="category"><a href="">SPONSORED INSIGHT</a></div>
               <div class="image"><a href="">
-                  <img height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/profile/3a_amadeus_image_with_text.png" alt="GettyImages-1136467917" title="">
+                  <img height="481" class="mapping-md lazysize  lazyloaded" src="assets/images/thumbs/cookies-laxatives.jpg" alt="GettyImages-1136467917" title="">
                 </a></div>
             </div>
             <h2><a href="#">THE IMPORTANCE OF AN IB EDUCATION IN 2019</a></h2>
@@ -188,7 +188,7 @@
             <div class="card">
               <div class="category"><a href="">SPONSORED INSIGHT</a></div>
               <div class="image"><a href="">
-                  <img height="481" class="mapping-md lazysize  lazyloaded" src="https://s.newsweek.com/sites/www.newsweek.com/files/2019-0308-guatemala-td-sponsor.jpg" alt="GettyImages-1136467917" title="">
+                  <img height="481" class="mapping-md lazysize  lazyloaded" src="assets/images/thumbs/staceyabramsfarrightleftisthealthcare.jpg" alt="GettyImages-1136467917" title="">
                 </a></div>
             </div>
             <h2><a href="#">Guatemala: The Heart of the Mayan World</a></h2>
@@ -207,31 +207,31 @@
         </div>
         <ul class="p-0">
           <li class="flex-xs clearfix">
-            <div class="image rounded-circle float-left"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/square_thumbnail/public/23544/profile_image/nw-columnists-craig-considine.png" alt=""></div>
+            <div class="image rounded-circle float-left"><img src="assets/images/thumbs/nw-columnist-xingang-chen.png" alt=""></div>
               <div class="info"><a href="#">Church Attacks are Opposite of Islam's True Teachings</a>
               <div class="byline"> BY <span>Craig Considine</span></div>
             </div>
           </li>
           <li class="flex-xs clearfix">
-            <div class="image rounded-circle float-left"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/square_thumbnail/public/23544/profile_image/nw-columnists-saul-hudson.png" alt=""></div>
+            <div class="image rounded-circle float-left"><img src="assets/images/thumbs/nw-columnist-sharon-kelly.png" alt=""></div>
               <div class="info"><a href="#">The Anthropocene Era: Do We Now Live on a Human Planet?</a>
               <div class="byline"> BY <span>NOEL CASTREE</span></div>
             </div>
           </li>
           <li class="flex-xs clearfix">
-            <div class="image rounded-circle float-left"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/square_thumbnail/public/23544/profile_image/robert_reich.png" alt=""></div>
+            <div class="image rounded-circle float-left"><img src="assets/images/thumbs/nw-columnists-anthony-w.-fontes.png" alt=""></div>
               <div class="info"><a href="#">Mueller Proved Trump Is Embodiment of 7 Deadly Sins</a>
               <div class="byline"> BY <span>ROBERT REICH</span></div>
             </div>
           </li>
           <li class="flex-xs clearfix">
-            <div class="image rounded-circle float-left"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/square_thumbnail/public/23544/profile_image/nw-columnists-craig-considine.png" alt=""></div>
+            <div class="image rounded-circle float-left"><img src="assets/images/thumbs/nw-columnists-harry-reid.png" alt=""></div>
               <div class="info"><a href="#">A History of Sri Lanka's Christians</a>
               <div class="byline"> BY <span>MATHEW SCHMALZ</span></div>
             </div>
           </li>
           <li class="flex-xs clearfix">
-            <div class="image rounded-circle float-left"><img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/square_thumbnail/public/23544/profile_image/nw-columnists-saul-hudson.png" alt=""></div>
+            <div class="image rounded-circle float-left"><img src="assets/images/thumbs/nw-columnists-pedro-rios.png" alt=""></div>
               <div class="info"><a href="#">In Venezuela’s Perfect Storm, Bitcoin Is a Lifeline</a>
               <div class="byline"> BY <span>SAUL HUDSON</span></div>
             </div>
@@ -256,7 +256,7 @@
         <div class="content">
           <div class="card mb-5 w-md-50 w-lg-100 m-auto">
             <div class="card">
-            <img src="https://s.newsweek.com/sites/www.newsweek.com/files/weed11_banner_300x250.jpg" alt="" class="card-img-top">
+            <img src="assets/images/thumbs/trails-adirondacks-cover.jpg" alt="" class="card-img-top">
             <div class="category"><a href="" class="text-primary">SPECIAL EDITION</a></div>
             </div>
             <div class="card-body">
@@ -273,7 +273,7 @@
           </div>
           <div class="card mb-5 w-md-50 w-lg-100 m-auto">
             <div class="card">
-            <img src="https://s.newsweek.com/sites/www.newsweek.com/files/2019-0410-paraguay-td-sponsored.jpg" alt="" class="card-img-top">
+            <img src="assets/images/thumbs/affirmative-action-college-admissions-scandal-statistics.jpg" alt="" class="card-img-top">
             <div class="category"><a href="" class="text-primary">SPECIAL EDITION</a></div>
             </div>
             <div class="card-body">
@@ -283,7 +283,7 @@
           </div>
           <div class="card mb-5 w-md-50 w-lg-100 m-auto">
             <div class="card">
-            <img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/profile/c75t9359.jpg" alt="" class="card-img-top">
+            <img src="assets/images/thumbs/kevin-hart-doubles-down-offensive-humor-joe-rogan-podcast.png" alt="" class="card-img-top">
             <div class="category"><a href="" class="text-primary">SPECIAL EDITION</a></div>
             </div>
             <div class="card-body">
@@ -295,11 +295,11 @@
         </div>
         </div>
 
-        <div class="row">
+        <div class="row mb-3">
         <div class="col-xs-12 col-md-3 order-md-2 mt-5 mt-md-0">
           <div class="card border-0">
             <div class="card">
-              <img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/embed-xs/public/2019/04/18/17190426-0503cover1800x2400.jpg" alt="" class="card-img-top">
+              <img src="assets/images/20190412cover1800x2400.jpg" alt="" class="card-img-top">
               <div class="category"><a href="">MAY 03 ISSUE</a></div>
             </div>
             <div class="card-body cardback">
@@ -746,7 +746,7 @@
             </div>
           <div class="card">
 
-            <img src="https://s.newsweek.com/sites/www.newsweek.com/files/styles/sm/public/profile/univ_of_utah_pharmacybuildingsunset.jpg" alt="" class="card-img-top">
+            <img src="assets/images/thumbs/3-tartan-day-parade-2019.jpg" alt="" class="card-img-top">
             <div class="card-body py-1 lastpart"><h4>Should You Be Thinking About a Career in Pharmacy?</h4> <div class="summary">Few career areas are as aspirational and revered as those in the medical sector, but it’s not just doctors and surgeons that are the stars...</div> </div>
           </div>
           </div>
